fix(front): node env var for front office app

--- a/apps/front/.env.local
+++ b/apps/front/.env.local
@@ -1,6 +1,17 @@
-HTTPS=true
-HOST=local.makeorg.tech
+# Use local certificates. Only for local env. 
+LOCAL_USE_CERTS=true
+
+# DOMAIN for cookie rewrite. Only for local env. 
+LOCAL_COOKIES_DOMAIN_REWRITE=local.makeorg.tech
+
+# API url to use by server proxy on /backend. Only for local and test env.
+LOCAL_PROXY_API_URL=https://api.preprod.makeorg.tech
+
+# PORT
 PORT=3000
+
+# API url
 API_URL=https://local.makeorg.tech:3000/backend
-PROXY_TARGET_API_URL=https://api.preprod.makeorg.tech
+
+# Front url
 FRONT_URL=https://local.makeorg.tech:3000
