--- a/apps/front/.env.test
+++ b/apps/front/.env.test
@@ -1,6 +1,17 @@
-HTTPS=false
-HOST=localhost
+# Use local certificates. Only for local env. 
+LOCAL_USE_CERTS=false 
+
+# DOMAIN for cookie rewrite. Only for local env. 
+LOCAL_COOKIES_DOMAIN_REWRITE=localhost
+
+# API url to use by server proxy on /backend. Only for local and test env.
+LOCAL_PROXY_API_URL=http://localhost:9000
+
+# PORT
 PORT=9009
+
+# API url
 API_URL=http://localhost:9000
-PROXY_TARGET_API_URL=http://localhost:9000
+
+# Front url
 FRONT_URL=http://localhost:9009
