refactor(global): improve typing by replacing any types

--- a/apps/front/tsconfig.json
+++ b/apps/front/tsconfig.json
@@ -17,6 +17,9 @@
     "../../components",
     "../../utils"
   ],
+  "exclude": [
+    "**/coverage"
+  ],
   "paths": {
     "@make.org/widget": ["../../apps/widget/*"],
     "@make.org/front": ["../../apps/front/*"],
