--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "**/Svg/*.js",
     "**/*.config.js",
     "**/apimock",
+    "**/reports"
   ],
   "compilerOptions": {
     "baseUrl": "./types/index",
