refactor(global): add docker compose configuration for cypress

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 
 services:
-    app_make_dev:
+    app_make_dev: &dev_service
       image: app_make_dev
       build:
         context: .
@@ -30,6 +30,19 @@ services:
       profiles: 
         - app-dev
   
+    app_make_ssr: &ssr_service
+      image: app_make_ssr
+      build:
+        context: .
+        dockerfile: apps/front/Dockerfile
+        target: app-ssr
+      ports:
+        - 3000:3000
+        - 8888:8888
+      volumes: *default_volumes
+      profiles:
+        - app-ssr
+
     api_mock:
       image: api_mock
       build:
@@ -43,29 +56,29 @@ services:
         - app-test
     
     app_make_test:
+      <<: *ssr_service
       image: app_make_test
-      build:
-        context: .
-        dockerfile: apps/front/Dockerfile
-        target: app-test
       ports:
-        - 9009:9009
-      volumes: *default_volumes
+        - 9009:3000
+      volumes: 
+        - .:/home/app
+        - /home/app/node_modules
+        - /home/app/apps/front/node_modules
+        - /home/app/apps/widget/node_modules
+        - /home/app/api/node_modules
+        - /home/app/components/node_modules
+        - /home/app/types/node_modules
+        - /home/app/assets/node_modules
+        - /home/app/utils/node_modules
+        - /home/app/ui/node_modules
+        - /home/app/store/node_modules
+        - /home/app/apimock/node_modules
+        - /home/app/apps/front/dist
+        - /home/app/apps/widget/dist
+        - /home/app/dist
+        - ./apps/front/.env.cypress:/home/app/apps/front/.env.local
       profiles: 
         - app-test
-
-    app_make_ssr:
-      image: app_make_ssr
-      build:
-        context: .
-        dockerfile: apps/front/Dockerfile
-        target: app-ssr
-      ports:
-        - 3000:3000
-        - 8888:8888
-      volumes: *default_volumes
-      profiles: 
-        - app-ssr
 
     widget_make_dev:
       image: widget_make_dev
