--- a/apps/widget/.env.local
+++ b/apps/widget/.env.local
@@ -1,11 +1,8 @@
 # Use local certificates. Only for local env. 
 LOCAL_USE_CERTS=true
 
-# DOMAIN for cookie rewrite. Only for local env. 
-LOCAL_COOKIES_DOMAIN_REWRITE=local.makeorg.tech
-
 # API url to use by server proxy on /backend. Only for local and test env.
-LOCAL_PROXY_API_URL=https://api.preprod.makeorg.tech
+LOCAL_USE_PROXY=true
 
 # Widget config URL (will be removed in a future release). Only for production env.
 CONFIG_URL=
@@ -13,8 +10,11 @@ CONFIG_URL=
 # PORT
 PORT=3000
 
-# API url
-API_URL=https://local.makeorg.tech:3000/backend
+# API url client side
+API_URL_CLIENT_SIDE=https://local.makeorg.tech:3000/backend
+
+# API URL server side
+API_URL_SERVER_SIDE=https://api.preprod.makeorg.tech
 
 # Front url
 FRONT_URL=https://local.makeorg.tech:3000
