--- a/apps/front/.env.cypress
+++ b/apps/front/.env.cypress
@@ -1,6 +1,4 @@
-HTTPS=false
-API_URL=http://api_mock:9000
-PROXY_TARGET_API_URL=http://api_mock:9000
 PORT=3000
-HOST=local.makeorg.tech
-FRONT_URL=https://local.makeorg.tech:3000
+API_URL_SERVER_SIDE=http://api_mock:9000
+API_URL_CLIENT_SIDE=http://localhost:9000
+FRONT_URL=http://localhost:9009
