--- a/utils/services/trackingConfiguration.yaml
+++ b/utils/services/trackingConfiguration.yaml
@@ -548,56 +548,46 @@ DISPLAY_DEMOGRAPHICS:
     key: display-demographics
     description: Display demographics card in sequence
     parameters:
-      - key: type
-        description: type name
-        values:
-          - gender
-          - age
-          - region
+      - key: name
+        description: demographic name
+      - key: demographicId
+        description: demographic id
 
 DISPLAY_DEMOGRAPHICS_CONFIRMATION:
     key: display-demographics-confirmation
     description: Display demographics confirmation in sequence
     parameters:
-      - key: type
-        description: type name
-        values:
-          - gender
-          - age
-          - region
+      - key: name
+        description: demographic name
+      - key: demographicId
+        description: demographic id
 
 CLICK_SKIP_DEMOGRAPHICS:
     key: click-skip-demographics
     description: Click on skip button on demographics card in sequence
     parameters:
-      - key: type
-        description: type name
-        values:
-          - gender
-          - age
-          - region
+      - key: name
+        description: demographic name
+      - key: demographicId
+        description: demographic id
 
 CLICK_SAVE_DEMOGRAPHICS:
     key: click-save-demographics
     description: Click on save button on demographics card in sequence
     parameters:
-      - key: type
-        description: type name
-        values:
-          - gender
-          - age
-          - region
+      - key: name
+        description: demographic name
+      - key: demographicId
+        description: demographic id
 
 CLICK_VOTE_DEMOGRAPHICS:
     key: click-vote-demographics
     description: Click on continue button on demographics confirmation card in sequence
     parameters:
-      - key: type
-        description: type name
-        values:
-          - gender
-          - age
-          - region
+      - key: name
+        description: demographic name
+      - key: demographicId
+        description: demographic id
 
 CLICK_FILTER:
     key: click-filter
