--- a/components/package.json
+++ b/components/package.json
@@ -15,6 +15,7 @@
     "athena-design-tokens": "^0.1.7",
     "enzyme": "^3.11.0",
     "i18next": "^20.3.4",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
     "react-cookie": "^4.1.1",
