--- a/apps/widget/Dockerfile
+++ b/apps/widget/Dockerfile
@@ -49,6 +49,45 @@ CMD ["./node_modules/.bin/lerna", "run", "--scope=@make.org/widget", "server:dev
 
 EXPOSE 3000
 
+
+############
+# TEST
+############
+FROM cypress/browsers:node16.5.0-chrome94-ff93 AS widget-test
+
+WORKDIR /home/app
+
+ENV PATH /home/app/node_modules/.bin:$PATH
+
+RUN apk --no-cache add git
+RUN npm install -g lerna@4.0.0
+
+COPY ["package*.json", "yarn.lock", "./"]
+COPY ["apps/widget/package*.json", "./apps/widget/"]
+COPY ["api/package*.json", "./api/"]
+COPY ["components/package*.json", "./components/"]
+COPY ["types/package*.json", "./types/"]
+COPY ["assets/package*.json", "./assets/"]
+COPY ["utils/package*.json", "./utils/"]
+COPY ["ui/package*.json", "./ui/"]
+COPY ["store/package*.json", "./store/"]
+COPY ["apimock/package*.json", "./apimock/"]
+COPY lerna.json ./
+
+RUN ["lerna", "bootstrap"]
+
+COPY . ./
+
+ENV NODE_ENV ci
+
+RUN ["./node_modules/.bin/lerna", "run", "--scope=@make.org/widget",  "build", "--stream"]
+RUN ["./node_modules/.bin/lerna", "run", "--scope=@make.org/apimock", "start", "--stream"]
+RUN [ "pm2-runtime", "start", "ecosystem.config.js", "--only", "widget-test" ]
+CMD ["./node_modules/.bin/lerna", "run", "--scope=@make.org/widget", "cypress:front:run", "--stream"]
+
+EXPOSE 9009
+
+
 ############
 # BUILD
 ############
