fix(front): fixingvotes and tooltip on monorepo
fix(front): force click on cypress button

fix(front): update cypress on sequence demographics card

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,6 +81,7 @@ stages:
     - node -v
     - export YARN_VERSION="$YARN_VERSION"
     - yarn install --check-files
+  cache: []
 
 .build:
   stage: build
