--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,7 @@ stages:
     RUNDECK_JOB_ID: $RUNDECK_FRONT_JOB_ID
   only:
     changes:
+      - .gitlab-ci.yml
       - api/**/*
       - assets/**/*
       - components/**/*
@@ -57,6 +58,7 @@ stages:
     RUNDECK_JOB_ID: $RUNDECK_WIDGET_JOB_ID
   only:
     changes:
+      - .gitlab-ci.yml
       - api/**/*
       - assets/**/*
       - components/**/*
