--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-config-prettier": "~8.3.0",
     "eslint-import-resolver-babel-module": "~5.3.1",
     "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "~24.3.6",
     "eslint-plugin-jsx-a11y": "^6.4.1",
