--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/cli": "^7.14.3",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@svgr/cli": "^6.1.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@types/enzyme": "^3.10.9",
     "@types/jsdom": "^16.2.13",
