--- a/components/tsconfig.json
+++ b/components/tsconfig.json
@@ -8,6 +8,8 @@
   ],
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "jsx": "react",
+    "jsx": "react",
     "composite": true
   },
   "paths": {
