--- a/ui/package.json
+++ b/ui/package.json
@@ -39,5 +39,8 @@
     "snapshot-diff": "^0.9.0",
     "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2"
+  },
+  "scripts": {
+    "svg": "yarn svgr --template ./Svg/svgrTemplate.js --no-index --typescript -d ./Svg/elements ./Svg/svgr && cp -r ./Svg/svgr/* ./Svg/source"
   }
 }
