--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "jscpd": "^3.3.26",
     "jsdom": "^16.6.0",
     "lerna": "4.0.0",
+    "lerna-update-wizard": "^1.1.2",
     "prettier": "^2.3.1",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.2.1"
