--- a/store/package.json
+++ b/store/package.json
@@ -9,7 +9,7 @@
     "@make.org/utils": "0.1.0",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.2",
-    "axios": "^0.21.1",
+    "axios": "~0.26.1",
     "i18next": "^20.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
