chore(front): update http-proxy-mmiddle

--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -30,13 +30,13 @@
 				"dotenv-webpack": "^7.0.3",
 				"express": "~4.17.1",
 				"express-prom-bundle": "~6.3.6",
-				"favicons": "^6.2.2",
+				"favicons": "6.2.2",
 				"favicons-webpack-plugin": "^5.0.2",
 				"glider-js": "^1.7.7",
 				"helmet-csp": "~3.4.0",
 				"history": "^5.0.0",
 				"html-webpack-plugin": "^5.3.2",
-				"http-proxy-middleware": "^2.0.0",
+				"http-proxy-middleware": "~2.0.4",
 				"i18next": "^20.3.1",
 				"js-yaml": "^4.1.0",
 				"memory-cache": "~0.2.0",
