--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -32,10 +32,10 @@
     "dotenv-webpack": "^7.0.3",
     "express": "~4.17.1",
     "express-prom-bundle": "^6.4.1",
-    "favicons": "^6.2.2",
+    "favicons": "6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^5.3.2",
-    "http-proxy-middleware": "^2.0.0",
+    "http-proxy-middleware": "~2.0.4",
     "i18next": "^20.3.4",
     "memory-cache": "~0.2.0",
     "pm2": "~5.2.0",
