--- a/apps/front/.env.local
+++ b/apps/front/.env.local
@@ -15,3 +15,10 @@ API_URL_SERVER_SIDE=https://api.preprod.makeorg.tech
 
 # Front url
 FRONT_URL=https://local.makeorg.tech:3000
+
+# FB pixel id
+FB_PIXEL_ID=260470104426586
+
+# FB conversion token
+FB_CONVERSION_TOKEN=
+
