--- a/apps/front/.env.test
+++ b/apps/front/.env.test
@@ -2,3 +2,5 @@ PORT=9009
 API_URL_SERVER_SIDE=http://localhost:9000
 API_URL_CLIENT_SIDE=http://localhost:9000
 FRONT_URL=http://localhost:9009
+FB_PIXEL_ID=260470104426586
+FB_CONVERSION_TOKEN=
